@@ -1,3 +1,7 @@
+Mon Jul 24 21:05:20 CEST 2006 (tk)
+----------------------------------
+  * shared/cdiff.c: add missing fclose() in cdiff_cmd_close()
+
 Mon Jul 24 13:13:35 BST 2006 (njh)
 ----------------------------------
   * libclamav/mbox.c:	Some HTML.Phishing.Bank-598 were not being caught,
